@@ -7,6 +7,7 @@ Release 1.3.0
 --------------------
  - assimilated connector-sftp project
  - externalised hibernate properties
+ - reduced logging at info level
 
 Release 1.2.7
 --------------------
